Implemeted hello-ld-preload

--- a/hello-ld-preload/Makefile
+++ b/hello-ld-preload/Makefile
@@ -1,7 +1,10 @@
-CFLAGS += -Wall -Wextra -Og -g3 -std=c99
-EXE = hello-ld-preload
+CFLAGS += -Wall -Wextra -g3 -std=c99
+EXE = hello-ld-preload myfopen.so
 
 all: $(EXE)
+
+myfopen.so: myfopen.c
+	gcc -Wall -fPIC -shared -o myfopen.so myfopen.c
 
 clean:
 	$(RM) $(EXE)
