--- a/fake-fopen/Makefile
+++ b/fake-fopen/Makefile
@@ -1,11 +1,11 @@
 CFLAGS += -Wall -Wextra -g3 -std=c99
 EXE = fake-fopen myfopen.so #myfopen
-LDLIBS = -ldl
+# LDLIBS = -ldl
 
 all: $(EXE)
 
 myfopen.so: myfopen.c
-	gcc -Wall -fPIC -shared -o myfopen.so myfopen.c $(LDLIBS)
+	gcc -Wall -fPIC -shared -o myfopen.so myfopen.c -ldl
 
 clean:
 	$(RM) $(EXE)
