More error-checking

--- a/fancy-file-io/Makefile
+++ b/fancy-file-io/Makefile
@@ -1,12 +1,12 @@
-CFLAGS += -Wall -g3 -std=c99
+CFLAGS += -Wall -Og -g3 -std=c99
 EXE = fancy-file-io myio.so
-TEST = myio
+DEBUG = myio
 LDLIBS = -ldl
 
 all: $(EXE)
 
-test: $(TEST)
-both: $(EXE) $(TEST)
+debug: $(DEBUG)
+both: $(EXE) $(DEBUG)
 
 myio.so: myio.c
 	gcc -Wall -fPIC -shared -o myio.so myio.c -ldl
@@ -15,4 +15,4 @@ myio: myio.c
 	$(CC) $(CFLAGS) myio.c -o myio -ldl
 
 clean:
-	$(RM) $(EXE) $(TEST)
+	$(RM) $(EXE) $(DEBUG)
