Failed to compile optanemalloc.so gcc -Wall -fPIC -shared -o optanemalloc.so optanemalloc.c -lmemkind optanemalloc.c:8:21: fatal error: memkind.h: No such file or directory compilation terminated. make: *** [optanemalloc.so] Error 1 Failed to compile optanemalloc.so

--- a/fake-malloc-libmemkind/Makefile
+++ b/fake-malloc-libmemkind/Makefile
@@ -1,6 +1,6 @@
-CFLAGS += -Wall -Wextra -g3 -std=c99
+CFLAGS = -Wall -Wextra -g3 -std=c99
 EXE = fake-malloc mymalloc.so
-DEBUG = mymalloc
+DEBUG = mymalloc optanemalloc optanemalloc.so
 TEST_FILES = out.txt
 
 all: $(EXE)
@@ -10,8 +10,14 @@ both: $(EXE) $(DEBUG)
 mymalloc.so: mymalloc.c
 	gcc -Wall -fPIC -shared -o mymalloc.so mymalloc.c -ldl
 
+optanemalloc.so: optanemalloc.c
+	gcc -Wall -fPIC -shared -o optanemalloc.so optanemalloc.c -lmemkind
+
 mymalloc: mymalloc.c
 	$(CC) $(CFLAGS) mymalloc.c -o mymalloc -ldl
+
+optanemalloc: optanemalloc.c
+	$(CC) $(CFLAGS) optanemalloc.c -o optanemalloc -ldl
 
 clean:
 	$(RM) $(EXE) $(DEBUG) $(TEST_FILES)
