Adding memkind. Not sure about realloc error: [osalbahr@c64 fake-malloc-libmemkind]$ ./fake-malloc Flushing at 11 Calling malloc sizeof(int) ... Flushing at 15 iptr = 0x175c010 Flushing at 17 *iptr = 41 Calling malloc sizeof(char) ... Flushing at 22 cptr = 0x175c010 Flushing at 24 *cptr = A Calling malloc 0 ... Flushing at 29 zero = 0x175c010 [osalbahr@c64 fake-malloc-libmemkind]$ LD_PRELOAD=./optanemalloc.so ./fake-malloc OK, malloc'ing 568 :) OK, malloc'ing 120 :) *** Error in `./fake-malloc': realloc(): invalid pointer: 0x00007fd4ebe0c000 *** OK, malloc'ing 56 :) ======= Backtrace: ========= /usr/lib64/libc.so.6(+0x7f474)[0x7fd4ed6bd474] /usr/lib64/libc.so.6(+0x86ea9)[0x7fd4ed6c4ea9] /usr/lib64/libc.so.6(getdelim+0x10b)[0x7fd4ed6ad9fb] /usr/lib64/libnuma.so.1(+0x36f0)[0x7fd4ec52d6f0] /lib64/ld-linux-x86-64.so.2(+0xf97f)[0x7fd4edc1d97f] /lib64/ld-linux-x86-64.so.2(+0x117a)[0x7fd4edc0f17a] ======= Memory map: ======== 00400000-00401000 r-xp 00000000 00:2f 11923052552                        /home/osalbahr/git/ld-preload-practice/fake-malloc-libmemkind/fake-malloc 00600000-00601000 r--p 00000000 00:2f 11923052552                        /home/osalbahr/git/ld-preload-practice/fake-malloc-libmemkind/fake-malloc 00601000-00602000 rw-p 00001000 00:2f 11923052552                        /home/osalbahr/git/ld-preload-practice/fake-malloc-libmemkind/fake-malloc 7fd4eba00000-7fd4ec200000 rw-p 00000000 00:00 0 7fd4ec314000-7fd4ec329000 r-xp 00000000 08:02 24641650                   /usr/lib64/libgcc_s-4.8.5-20150702.so.1 7fd4ec329000-7fd4ec528000 ---p 00015000 08:02 24641650                   /usr/lib64/libgcc_s-4.8.5-20150702.so.1 7fd4ec528000-7fd4ec529000 r--p 00014000 08:02 24641650                   /usr/lib64/libgcc_s-4.8.5-20150702.so.1 7fd4ec529000-7fd4ec52a000 rw-p 00015000 08:02 24641650                   /usr/lib64/libgcc_s-4.8.5-20150702.so.1 7fd4ec52a000-7fd4ec534000 r-xp 00000000 08:02 24649264                   /usr/lib64/libnuma.so.1.0.0 7fd4ec534000-7fd4ec734000

--- a/fake-malloc-libmemkind/Makefile
+++ b/fake-malloc-libmemkind/Makefile
@@ -1,17 +1,21 @@
 CFLAGS = -Wall -Wextra -g3 -std=c99
-EXE = fake-malloc mymalloc.so
-DEBUG = mymalloc optanemalloc optanemalloc.so
+EXE = fake-malloc mymalloc.so optanemalloc.so
+DEBUG = mymalloc optanemalloc
 TEST_FILES = out.txt
+
+MY_SO_FLAGS = -Wall -fPIC -shared
+MY_INCLUDE_PATH = $(HOME)/.local/include
+MY_LIB_PATH = $(HOME)/.local/lib
 
 all: $(EXE)
 debug: $(DEBUG)
 both: $(EXE) $(DEBUG)
 
 mymalloc.so: mymalloc.c
-	gcc -Wall -fPIC -shared -o mymalloc.so mymalloc.c -ldl
+	gcc $(MY_SO_FLAGS) -o mymalloc.so mymalloc.c -ldl
 
 optanemalloc.so: optanemalloc.c
-	gcc -Wall -fPIC -shared -o optanemalloc.so optanemalloc.c -lmemkind
+	gcc -I $(MY_INCLUDE_PATH) $(MY_SO_FLAGS) -o optanemalloc.so optanemalloc.c -lmemkind -L$(MY_LIB_PATH)
 
 mymalloc: mymalloc.c
 	$(CC) $(CFLAGS) mymalloc.c -o mymalloc -ldl
