memkind_malloc itself calls malloc (and realloc) [osalbahr@c63 fake-malloc-libmemkind]$ make clean rm -f fake-malloc mymalloc.so optanemalloc.so exp/empty mymalloc optanemalloc out.txt [osalbahr@c63 fake-malloc-libmemkind]$ make cc -Wall -Wextra -g3 -std=c99    fake-malloc.c   -o fake-malloc gcc -Wall -fPIC -shared -o mymalloc.so mymalloc.c -ldl gcc -I /home/osalbahr/.local/include -Wall -fPIC -shared -o optanemalloc.so optanemalloc.c -lmemkind -L/home/osalbahr/.local/lib cc -Wall -Wextra -g3 -std=c99    exp/empty.c   -o exp/empty [osalbahr@c63 fake-malloc-libmemkind]$ valgrind exp/empty ==32534== Memcheck, a memory error detector ==32534== Copyright (C) 2002-2022, and GNU GPL'd, by Julian Seward et al. ==32534== Using Valgrind-3.21.0 and LibVEX; rerun with -h for copyright info ==32534== Command: exp/empty ==32534== ==32534== ==32534== HEAP SUMMARY: ==32534==     in use at exit: 0 bytes in 0 blocks ==32534==   total heap usage: 0 allocs, 0 frees, 0 bytes allocated ==32534== ==32534== All heap blocks were freed -- no leaks are possible ==32534== ==32534== For lists of detected and suppressed errors, rerun with: -s ==32534== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0) [osalbahr@c63 fake-malloc-libmemkind]$ LD_PRELOAD=./optanemalloc.so exp/empty OK, malloc'ing 568 :) Calling  memkind_malloc with 568  ...memkind_malloc DONE OK, malloc'ing 120 :) Calling  memkind_malloc with 120  ...memkind_malloc DONE *** Error in `exp/empty': realloc(): invalid pointer: 0x00007f7ae500c000 *** OK, malloc'ing 56 :) Calling  memkind_malloc with 56  ...memkind_malloc DONE ======= Backtrace: ========= /usr/lib64/libc.so.6(+0x7f474)[0x7f7ae686c474] /usr/lib64/libc.so.6(+0x86ea9)[0x7f7ae6873ea9] /usr/lib64/libc.so.6(getdelim+0x10b)[0x7f7ae685c9fb] /usr/lib64/libnuma.so.1(+0x36f0)[0x7f7ae56dc6f0] /lib64/ld-linux-x86-64.so.2(+0xf97f)[0x7f7ae6dcc97f] /lib64/ld-linux-x86-64.so.2(+0x117a)[0x7f7ae6dbe17a] ======= Memory map: ======== 00400000-00401000 r-xp 00000000 00:2f 6529216

--- a/fake-malloc-libmemkind/Makefile
+++ b/fake-malloc-libmemkind/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -Wall -Wextra -g3 -std=c99
-EXE = fake-malloc mymalloc.so optanemalloc.so
+EXE = fake-malloc mymalloc.so optanemalloc.so exp/empty
 DEBUG = mymalloc optanemalloc
 TEST_FILES = out.txt
 
