memkind using malloc proof-of-concept

--- a/fake-malloc-libmemkind/Makefile
+++ b/fake-malloc-libmemkind/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -Wall -Wextra -g3 -std=c99
 EXE = fake-malloc mymalloc.so optanemalloc.so exp/empty
 DEBUG = mymalloc optanemalloc
-TEST_FILES = out.txt
+TEST_FILES = out.txt out-optane.txt
 
 MY_SO_FLAGS = -Wall -fPIC -shared
 MY_INCLUDE_PATH = $(HOME)/.local/include
