File I/O using memking proof-of-concept

--- a/memkind-file-io/Makefile
+++ b/memkind-file-io/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -Wall -Wextra -g3 -std=c99
-EXE = fake-malloc mymalloc.so optanemalloc.so exp/empty
+EXE = fake-malloc mymalloc.so optanemalloc.so exp/empty fancy-file-io myio.so
 DEBUG = mymalloc optanemalloc
-TEST_FILES = out.txt out-optane.txt
+TEST_FILES = out*.txt
 
 MY_SO_FLAGS = -Wall -fPIC -shared
 MY_INCLUDE_PATH = $(HOME)/.local/include
@@ -16,6 +16,9 @@ mymalloc.so: mymalloc.c
 
 optanemalloc.so: optanemalloc.c
 	gcc -I $(MY_INCLUDE_PATH) $(MY_SO_FLAGS) -o optanemalloc.so optanemalloc.c -lmemkind -L$(MY_LIB_PATH)
+
+myio.so: myio.c
+	gcc -I $(MY_INCLUDE_PATH) $(MY_SO_FLAGS) -o myio.so myio.c -lmemkind -L$(MY_LIB_PATH)
 
 mymalloc: mymalloc.c
 	$(CC) $(CFLAGS) mymalloc.c -o mymalloc -ldl
