--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,4 +20,14 @@ jobs:
     - name: Testing fancy-file-io
       run: cd fancy-file-io && ./test.sh
     - name: Testing memkind-file-io
-      run: pwd && cd && pwd
+      run: |
+        mkdir $HOME/.local
+        git clone https://github.com/memkind/memkind
+        cd memkind
+        ./autogen.sh
+        ./configure --prefix=$HOME/.local
+        make
+        make install
+        cd ..
+        export LD_LIBRARY_PATH=$HOME/.local/lib
+        ./test.sh
