--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Install Memkind
       run: sudo apt-get install -y libmemkind-dev
     - name: (Skipped--for now) Testing memkind-file-io
-      run: # cd memkind-file-io && ./test.sh
+      run: echo # cd memkind-file-io && ./test.sh
