--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Upgrade packages
       run: sudo apt update && sudo apt upgrade -y
+    - name: Get runner information
+      run: uname -a && sudo apt install -y neofetch && neofetch
     - name: Test hello-ld-preload
       run: cd hello-ld-preload && ./test.sh
     - name: Test fake-fopen
