--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Upgrade packages
-      run: sudo apt update && sudo apt upgrade -y
+      run: sudo apt-get update && sudo apt-get upgrade -y
     - name: Get runner information
-      run: uname -a && sudo apt install -y neofetch && neofetch
+      run: uname -a && sudo apt-get install -y neofetch && neofetch
     - name: Test hello-ld-preload
       run: cd hello-ld-preload && ./test.sh
     - name: Test fake-fopen
@@ -24,6 +24,6 @@ jobs:
     - name: Test fancy-file-io
       run: cd fancy-file-io && ./test.sh
     - name: Install Memkind
-      run: sudo apt install -y libmemkind-dev
+      run: sudo apt-get install -y libmemkind-dev
     - name: (Skipped--for now) Testing memkind-file-io
       run: echo # cd memkind-file-io && ./test.sh
