--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,17 +13,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Get pre-upgrade runner information
+      run: |
+        uname -a
+        sudo apt-get update
+        apt-get install -y neofetch
+        neofetch
+        
     - name: Upgrade packages
       run: sudo apt-get update && sudo apt-get upgrade -y
+      
     - name: Get runner information
       run: uname -a && sudo apt-get install -y neofetch && neofetch
+      
     - name: Test hello-ld-preload
       run: cd hello-ld-preload && ./test.sh
+      
     - name: Test fake-fopen
       run: cd fake-fopen && ./test.sh
+      
     - name: Test fancy-file-io
       run: cd fancy-file-io && ./test.sh
+      
     - name: Install Memkind
       run: sudo apt-get install -y libmemkind-dev
+      
     - name: (Skipped--for now) Testing memkind-file-io
       run: echo # cd memkind-file-io && ./test.sh
