--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         uname -a
         sudo apt-get update
-        apt-get install -y neofetch
+        sudo apt-get install -y neofetch
         neofetch
         
     - name: Upgrade packages
