--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -41,3 +41,8 @@ jobs:
       
     - name: (Skipped--for now) Testing memkind-file-io
       run: echo # cd memkind-file-io && ./test.sh
+    
+    - name: Test PMDK installation
+      run: |
+        cd hello-pmdk
+        make test
