--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -42,6 +42,9 @@ jobs:
     - name: (Skipped--for now) Testing memkind-file-io
       run: echo # cd memkind-file-io && ./test.sh
     
+    - name: Install PMDK (dev)
+      run: sudo apt-get install libpmem-dev librpmem-dev libpmemblk-dev libpmemlog-dev libpmemobj-dev libpmempool-dev libpmempool-dev libpmem2-dev
+    
     - name: Test PMDK installation
       run: |
         cd hello-pmdk
