--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,14 +18,14 @@ jobs:
       run: |
         uname -a
         sudo apt-get update
-        sudo apt-get install -y neofetch
+        sudo apt-get install neofetch
         neofetch
         
     - name: Upgrade packages
-      run: sudo apt-get update && sudo apt-get upgrade -y
+      run: sudo apt-get update && sudo apt-get upgrade
       
     - name: Get runner information
-      run: uname -a && sudo apt-get install -y neofetch && neofetch
+      run: uname -a && sudo apt-get install neofetch && neofetch
       
     - name: Test hello-ld-preload
       run: cd hello-ld-preload && ./test.sh
@@ -37,7 +37,7 @@ jobs:
       run: cd fancy-file-io && ./test.sh
       
     - name: Install Memkind
-      run: sudo apt-get install -y libmemkind-dev
+      run: sudo apt-get install libmemkind-dev
       
     - name: (Skipped--for now) Testing memkind-file-io
       run: echo # cd memkind-file-io && ./test.sh
