Comment-out apt-get upgrade
See https://docs.github.com/en/enterprise-cloud@latest/actions/using-github-hosted-runners/customizing-github-hosted-runners

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,9 +21,9 @@ jobs:
         sudo apt-get install neofetch
         neofetch
         
-    - name: Upgrade packages
-      run: |
-        sudo apt-get upgrade
+#     - name: Upgrade packages
+#       run: |
+#         sudo apt-get upgrade
       
     - name: Get runner information
       run: | 
