--- a/hello-pmdk/Makefile
+++ b/hello-pmdk/Makefile
@@ -1,12 +1,23 @@
 CFLAGS = -std=gnu99 -Wall -Wextra -O3
 EXE = hello-libpmem hello-libpmemobj
+WORKFLOW = pmem_store pmem_print
 LDLIBS = -lpmem -lpmemobj
+PMEM_FILE_PATH = pmem_file
+WORKFLOW_FILE = numbers.txt
 
-all: $(EXE)
+all: $(EXE) $(WORKFLOW)
 
-# See https://stackoverflow.com/questions/1490949/how-to-write-loop-in-a-makefile
-test: all
+test: all test_pmdk test_worfklow check
+
+test_pmdk:
 	$(foreach var,$(EXE),./$(var) &&) echo -n
 
+test_worfklow:
+	rm -f $(PMEM_FILE_PATH)
+	./pmem_store && ./pmem_print | tee $(WORKFLOW_FILE)
+
+check:
+	./check.sh
+
 clean:
-	$(RM) $(EXE)
+	$(RM) $(EXE) $(WORKFLOW) $(PMEM_FILE_PATH) $(TEMP_FILES)
