--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,50 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Get pre-upgrade runner information
+
+    - name: Test simple-in-memory-file
       run: |
-        uname -a
-        sudo apt-get update
-        sudo apt-get install neofetch
-        neofetch
-        
-#     - name: Upgrade packages
-#       run: |
-#         sudo apt-get upgrade
-      
-    - name: Get runner information
-      run: | 
-        uname -a
-        sudo apt-get install neofetch
-        neofetch
-      
-    - name: Test hello-ld-preload
-      run: | 
-        cd hello-ld-preload
+        cd simple-in-memory-file
         ./test.sh
-      
-    - name: Test fake-fopen
-      run: |
-        cd fake-fopen
-        ./test.sh
-      
-    - name: Test fancy-file-io
-      run: |
-        cd fancy-file-io
-        ./test.sh
-      
-    - name: Install Memkind
-      run: sudo apt-get install libmemkind-dev
-      
-    - name: (Skipped--for now) Testing memkind-file-io
-      run: echo # cd memkind-file-io && ./test.sh
-    
-    - name: Install PMDK (dev)
-      run: sudo apt-get install libpmem-dev librpmem-dev libpmemblk-dev libpmemlog-dev libpmemobj-dev libpmempool-dev libpmempool-dev libpmem2-dev
-    
-    - name: Test PMDK installation
-      run: |
-        cd hello-pmdk
-        make clean
-        make test
